scss/_base_tables.scss
@import 'settings';

// Tables
@mixin vf-b-tables {
  table {
    border: 0;
    border-collapse: collapse;
    line-height: map-get($line-heights, default-text);
    overflow-x: auto;
    padding-bottom: $spv-outer--scaleable;
    width: 100%;

    @if ($table-layout-fixed) {
      table-layout: fixed;
    } @else {
      table-layout: auto;
    }
  }

  td,
  th {
    @extend %single-border-text-vpadding--scaling;
    font-weight: 300;
    padding-left: 0;
    text-align: left;
    text-overflow: ellipsis;
    vertical-align: top;

    @media screen and (min-width: $breakpoint-medium) {
      &:not(:last-child) {
        padding-right: $sph-inner;
      }
    }
  }

  thead {
    th {
      @extend %muted-heading;
      line-height: map-get($line-heights, small);
      padding-bottom: $spv-inner--large - map-get($nudges, nudge--small);
    }

    tr {
      border-bottom: 1px solid $color-dark;
      vertical-align: top;
    }
  }

  tbody {
    tr {
      &:not(:first-child) {
        @extend %table-row-border;
      }
    }
  }

  tfoot {
    tr {
      @extend %table-row-border;
    }
  }

  %table-row-border {
    border-top: 1px solid $color-mid-light;
  }

  //accordion, table
  %single-border-text-vpadding--scaling {
    padding-bottom: $spv-inner--x-small--scaleable;
    padding-top: calc(#{$spv-inner--x-small--scaleable} - 1px);
  }
}

